Update Lithuanian translation https://igniterealtime.org/issues/browse/SPARK-1611

--- a/src/resources/i18n/spark_i18n.properties
+++ b/src/resources/i18n/spark_i18n.properties
@@ -333,7 +333,7 @@ button.re.detect = &Re-detect
 checkbox.allow.buzz = Allow users to &buzz you
 checkbox.auto.discover.port = Automatically discover host and port
 checkbox.auto.login = &Auto login
-checkbox.login.as.invisible = &Login as invisible
+checkbox.login.as.invisible = L&ogin as invisible
 checkbox.disable.chat.history = &Disable chat history
 checkbox.sort.asc.history = Sort messages in contact history by date ascending
 checkbox.disable.prev.chat.history = Disable &showing previous conversation in chat
