--- a/src/resources/i18n/spark_i18n_lt.properties
+++ b/src/resources/i18n/spark_i18n_lt.properties
@@ -207,7 +207,7 @@ date = Data
 description = Pavadinimas
 from = Siunt\u0117jas
 invite = Pakviesti
-join = Prisijungti
+join = Prisiju&ngti
 no = Ne
 not.registered = Neregistruota
 occupants = Lankytoj\u0173 sk.:
@@ -245,7 +245,7 @@ button.add.bookmark = Prid\u0117ti \u017eym\u0105
 button.add.service = Prid\u0117ti &tarnyb\u0105
 button.add.user = Prid\u0117ti a&bonent\u0105
 button.add2 = Pri&d\u0117ti
-button.advanced = Prisijungimo nuostatos
+button.advanced = Prisij&ungimo nuostatos
 button.approve = Pa&tvirtinti
 button.bookmark.room = Pasi\u017eym\u0117ti kambar\u012f
 button.browse = &Nar\u0161yti\u2026
@@ -261,9 +261,9 @@ button.decline = &Atmesti
 button.deny = &Nepriimti
 button.dial.number = Numeris &skambinimui
 button.find = &Ie\u0161koti
-button.join = &Prisijungti
+button.join = P&risijungti
 button.join.room = Prisijungti prie pasirinktojo &kambario
-button.login = &Prisijungti
+button.login = P&risijungti
 button.new = &Nauja
 button.profile = &Profilis
 button.quit = &Baigti
@@ -290,10 +290,10 @@ button.re.detect = &Aptikti i\u0161 naujo
 
 checkbox.allow.buzz = &Leisti pa\u0161nekovams purtyti j\u016bs\u0173 pokalbio lang\u0105
 checkbox.auto.discover.port = &Automatinis serverio ir jo prievado aptikimas
-checkbox.auto.login = Automati\u0161kai prisijungti
+checkbox.auto.login = A&utomati\u0161kai prisijungti
 checkbox.login.as.invisible = &Prisijungti nematomam
-checkbox.disable.chat.history = &I\u0161jungti pokalbi\u0173 \u017eurnal\u0105
-checkbox.sort.asc.history = R\u0173\u0161iuo&ti \u017einutes kontakto istorijoje datos did\u0117jimo tvarka
+checkbox.disable.chat.history = I\u0161j&ungti pokalbi\u0173 \u017eurnal\u0105
+checkbox.sort.asc.history = R\u016b\u0161iuo&ti \u017einutes kontakto istorijoje datos did\u0117jimo tvarka
 checkbox.disable.prev.chat.history = &I\u0161jungti ankstesni\u0173 pokalbi\u0173 rodym\u0105
 checkbox.enable.emoticons = &Rodyti jaustukus
 checkbox.idle.enabled = \u012ejungti neveikos rodym\u0105
@@ -312,7 +312,7 @@ checkbox.play.sound.on.new.message = Pagroti &gavus nauj\u0105 \u017einut\u0119
 checkbox.play.sound.on.outgoing.message = Pagroti &i\u0161siun\u010diant \u017einut\u0119
 checkbox.play.sound.when.offline = Pagroti, kai kitas &atsijungia
 checkbox.private.room = Priva&tus Kambarys
-checkbox.save.password = &\u012esiminti slapta\u017eod\u012f
+checkbox.save.password = \u012es&iminti slapta\u017eod\u012f
 checkbox.show.avatars.in.contactlist = Adres\u0173 s\u0105ra\u0161e rodyti ps&eudoportretus
 checkbox.show.notifications.in.conference = &Rodyti prane\u0161imus konferencij\u0173 kambariuose
 checkbox.show.time.in.chat.window = P&okalbio lange rodyti laik\u0105
@@ -321,9 +321,9 @@ checkbox.split.chat.window = Lango \u012ft&virtinimas (reik\u0117s i\u0161 naujo
 checkbox.start.in.tray = &Startuoti sistemos juostel\u0117je
 checkbox.click.single.tray = &Naudoti vien\u0105 paspaudim\u0105 sistemos juostel\u0117je, kad pakelti Spark \u012f priek\u012f
 checkbox.tabs.on.top = &Pokalbi\u0173 korteles rodyti vir\u0161uje (reik\u0117s i\u0161 naujo paleisti program\u0105)
-checkbox.use.compression = Naudoti suspaudim\u0105
-checkbox.use.debugger.on.startup = Startavus \u012fjungti klaid\u0173 paie\u0161kos veiksen\u0105 
-checkbox.use.proxy.server = Naudoti tarpin\u012f server\u012f
+checkbox.use.compression = Nau&doti suspaudim\u0105
+checkbox.use.debugger.on.startup = S&tartavus \u012fjungti klaid\u0173 paie\u0161kos veiksen\u0105 
+checkbox.use.proxy.server = Na&udoti tarpin\u012f server\u012f
 checkbox.use.system.look.and.feel = Naudoti operacin\u0117s sistemos i\u0161vaizd\u0105 (reik\u0117s i\u0161 naujo paleisti program\u0105)
 checkbox.window.to.front = &I\u0161kelti prane\u0161imo lang\u0105 \u012f ekrano priek\u012f
 checkbox.broadcast.hide.offline.user = Sl\u0117pti atsijungusius
@@ -333,6 +333,7 @@ checkbox.use.specify.below = Apib\u016bdinimas \u017eemiau
 checkbox.use.pki.authentication = &PKI autentifikavimo naudojimas
 checkbox.transport.tab.setting = Rodyti prieinamus ry\u0161io kanalus kortel\u0117je (reikalingas perkrovimas)
 checkbox.conference.tab.setting = Rodyti grupini\u0173 pokalbi\u0173 tarnyb\u0105 kortel\u0117je (reikalingas perkrovimas)
+checkbox.use.hostname.as.resource = Na&udoti kompiuterio vard\u0105 kaip resurs\u0105
 
 delete.log.permanently = Visi\u0161kas \u017eurnalo pa\u0161alinimas
 delete.permanently = Galutinai pa\u0161alinti?
@@ -357,19 +358,19 @@ label.na = n\u0117ra ira\u0161o
 label.cell = Mobilus nr.
 label.work = Darbinis nr.
 label.home = Nam\u0173 nr.
-label.accounts = &Paskyra
+label.accounts = Pas&kyra
 label.add.conference.service = &Konferencij\u0173 tarnybos prid\u0117jimas
 label.add.jid = &Pakviesti ir
 label.add.task = Pridedama u\u017eduotis
 label.auto.login = &Automatinis prisijungimas
 label.available.users.in.roster =   &Galimi partneriai visame s\u0105ra\u0161e
 label.cancel = At\u0161aukti
-label.change.password.to = &\u012era\u0161ykite nauj\u0105 slapta\u017eod\u012f
+label.change.password.to = \u012er&a\u0161ykite nauj\u0105 slapta\u017eod\u012f
 label.chatroom.fontsize = Pokalbi\u0173 kambario \u0161riftas:
 label.city = &Miestas
 label.close = &U\u017everti
 label.company = &Organizacija
-label.confirm.password = Slapta\u017eodis &pakartotinai
+label.confirm.password = &Slapta\u017eodis pakartotinai
 label.conflict.error = Negalima prisijungti, nes jau prisijungta.
 label.contact.to.find = Rasti pokalbio partner\u012f
 label.recent.conversation = Paskutiniai pokalbiai
@@ -390,7 +391,7 @@ label.fax = &Faksas
 label.find = &Ie\u0161koti
 label.first.name = &Vardas
 label.group = &Grup\u0117
-label.host = &Serveris
+label.host = S&erveris
 label.invited.users = Pakviestieji
 label.jabber.address = &Jabber adresas
 label.jabber.id = &Jabber ID
@@ -402,7 +403,7 @@ label.message = \u017dinu&t\u0117
 label.message.style = \u017dinut\u0117s &stilius
 label.middle.name = &Antras vardas
 label.maximum.history.page.entries = Maksimalus \u012fra\u0161\u0173 s&kai\u010dius \u017eurnalo puslapyje
-label.minutes.before.stale.chat = &Po kiek minu\u010di\u0173 neaktyvus kambarys pasidaro blankus
+label.minutes.before.stale.chat = Po &kiek minu\u010di\u0173 neaktyvus kambarys pasidaro blankus
 label.mobile = &Mobilaus tel. nr.
 label.name = &Vardas
 label.network = Tin&klas
@@ -413,17 +414,17 @@ label.ok = Gerai
 label.old.ssl = &Naudoti sen\u0105 SSL prievado metod\u0105
 label.os = &Operacin\u0117 sistema
 label.pager = Prane\u0161im\u0173 &gaviklis
-label.password = &Slapta\u017eodis
+label.password = S&lapta\u017eodis
 label.phone = &Telefonas
-label.port = &Prievadas
+label.port = P&rievadas
 label.postal.code = Pa\u0161to &kodas
 label.presence = &B\u016bsena
 label.priority = Prioritetai
 label.protocol = &Protokolas
 label.received = &Gautas
 label.rename.to = Pervardyti \u012f
-label.resource = &Resursai
-label.response.timeout = &Reakcijos laikas (sek.)
+label.resource = &Resursas
+label.response.timeout = R&eakcijos laikas (sek.)
 label.room = &Kambarys
 label.room.name = &Kambario vardas
 label.room.topic = Kambario pokalbio tema
@@ -843,7 +844,7 @@ title.about = Apie
 title.password.required = Reikalingas slapta\u017eodis
 title.task.notification = Prane\u0161imas apie u\u017eduot\u012f
 title.client.logs = \u017durnalo \u012fra\u0161ai
-title.advanced.connection.preferences = Prisijungimo nuostatos i\u0161samiau
+title.advanced.connection.preferences = P&risijungimo nuostatos i\u0161samiau
 title.account.create.registration = Paskyros registravimas
 title.bookmarks = \u017dymos
 title.account.created = Paskyra s\u0117kmingai sukurta
@@ -925,7 +926,7 @@ title.join.conference.room = Prisijungti prie konferencij\u0173
 title.last.activity = Paskiausi veiksmai
 title.login = Prisijungimas
 title.login.error = Prisijungimo klaida
-title.login.settings = Prisijungimo nuostatos
+title.login.settings = Prisij&ungimo nuostatos
 title.login.no.account = Nepavyksta nustatyti
 title.lookup.profile = Ie\u0161koti profilio
 title.msn.registration = MSN paskyros kredencialai
