--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -3,15 +3,17 @@
 # August 2011
 
 # http://people.w3.org/rishida/tools/conversion/
-# \u00E0 = à
-# \u00E2 = â
-# \u00E7 = ç
-# \u00E9 = é
-# \u00E8 = è
-# \u00EA = ê
-# \u00F4 = ô
-# \u00EE = î
+# \u00E0 = Ã 
+# \u00E2 = Ã¢
+# \u00E7 = Ã§
+# \u00E9 = Ã©
+# \u00E8 = Ã¨
+# \u00EA = Ãª
+# \u00F4 = Ã´
+# \u00EE = Ã®
 
+# Translation updated by Eric Ficheux
+# May 2014
 
 accept = Accepter
 active = Actif
@@ -60,15 +62,15 @@ action.print = Imprimer
 action.save = Enregistrer
 action.select.all = S\u00E9lectionnez tous
 
-button.accept = Accepter
+button.accept = &Accepter
 button.add = &Ajouter
-button.add.a.contact = Ajouter un contact
-button.add.bookmark = Ajouter un favoris
-button.add.service = Ajouter un service
+button.add.a.contact = &Ajouter un Contact
+button.add.bookmark = &Ajouter un Signet
+button.add.service = &Ajouter un Service
 button.add.user = Ajouter un utilisateur
 button.add2 = Ajouter
 button.advanced = A&vanc\u00E9
-button.approve = Approuver
+button.approve = &Approuver
 button.bookmark.room = Salle de discussion &favorite
 button.browse = &Parcourir...
 button.browse2 = Parcourir...
@@ -128,7 +130,7 @@ checkbox.play.sound.on.outgoing.message = Alerte sonore lors de l'envoi d'un mes
 checkbox.play.sound.when.offline = Alerte sonore lorsqu'un utilisateur se &d\u00E9connecte
 checkbox.private.room = Salon de discussion priv\u00E9
 checkbox.reconnect.panel.big = Afficher en tant que panneau
-checkbox.reconnect.panel.icon = Afficher en tant qu'icône
+checkbox.reconnect.panel.icon = Afficher en tant qu'icÃ´ne
 checkbox.reconnect.panel.small = Afficher dans le groupe de contact
 checkbox.reconnet.info = Sp\u00E9cifier l'affichage de reconnexion:
 checkbox.save.password = &Enregistrer le mot de passe
