--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -71,54 +71,57 @@ button.add.user = Ajouter un utilisateur
 button.add2 = Ajouter
 button.advanced = A&vanc\u00E9
 button.approve = &Approuver
-button.bookmark.room = Salle de discussion &favorite
-button.browse = &Parcourir...
-button.browse2 = Parcourir...
-button.browse3 = Pa&rcourir...
-button.cancel = Annuler
-button.clear = Effacer
-button.close = Fermer
+button.bookmark.room = Salle de Discussion &Favorite
+button.browse = &Parcourir
+button.browse2 = P&arcourir
+button.browse3 = Pa&rcourir
+button.cancel = &Annuler
+button.clear = &Effacer
+button.close = &Fermer
 button.copy.to.clipboard = Copiez dans le presse papier
-button.create.account = Cr\u00E9er un compte
-button.create.room = Cr\u00E9er ou joindre une salle de discussion
-button.decline = D\u00E9cliner
-button.deny = Refuser
-button.dial.number = Composer num\u00E9ro
-button.find = Rechercher
-button.join = Entrer
-button.join.room = Joindre la salle de discussion selectionn\u00E9e
+button.create.account = &Cr\u00E9er un Compte
+button.create.room = &Cr\u00E9er ou Joindre une Salle de Discussion
+button.decline = &Refuser
+button.deny = &Refuser
+button.dial.number = &Composer Num\u00E9ro
+button.find = &Rechercher
+button.join = &Entrer
+button.join.room = &Joindre la Salle de Discussion Selectionn\u00E9e
 button.login = &Connexion
-button.new = Nouveau
-button.profile = Profil
-button.quit = Quitter
+button.new = &Nouveau
+button.profile = &Profil
+button.quit = &Quitter
 button.re.detect = &Re-d\u00E9tecter
-button.reconnect = Reconnecter
-button.reconnect2 = Reconnecter
-button.refresh = Actualiser
-button.register = S'enregistrer
+button.reconnect = &Reconnecter
+button.reconnect2 = &Reconnecter
+button.refresh = &Actualiser
+button.register = &S'enregistrer
 button.reject = Rejeter
-button.remove.bookmark = Supprimer le favoris
-button.roster = Liste
+button.remove.bookmark = Supprimer le Signet
+button.roster = &Liste de Contacts
 button.save = Enregistrer
+button.save.for.future.use = &Sauvegarder pour plus tard
+button.search = &Rechercher
 button.send = Envoyer
 button.send.email = Courriel
 button.start.chat = Chat
 button.tasks.active = Actif
 button.tasks.all = Tous
 button.unset.file.explorer = D\u00E9selectionn\u00E9 le navigateur de fichier
+button.update = &Mettre \u00E0 jour
 button.view.notes = Visualiser les notes
 button.view.profile = Visualiser le profil complet
 button.view.tasklist = Visualiser la liste de t\u00E2ches
 
 checkbox.allow.buzz = Permettre aux utilisateurs de vous &secouer
 checkbox.auto.discover.port = &D\u00E9tecter automatiquement l'h\u00F4te et le port
-checkbox.auto.login = &Connexion automatique
+checkbox.auto.login = &Login Automatique
 checkbox.broadcast.hide.offline.user = Cacher les utilisateurs hors-ligne
-checkbox.disable.chat.history = &D\u00E9sactiver l'historique de conversation
+checkbox.disable.chat.history = &D\u00E9sactiver l'Historique de Conversation
 checkbox.disable.prev.chat.history = &D\u00E9sactiver l'afichage des conversations pr\u00E9c\u00E9dentes dans le chat
 checkbox.enable.emoticons = &Activer les \u00E9motic\u00F4nes
-checkbox.idle.enabled = &Mise en veille activ\u00E9e
-checkbox.launch.on.startup = &Lancer au d\u00E9marrage
+checkbox.idle.enabled = &Mise en Veille Activ\u00E9e
+checkbox.launch.on.startup = &Lancer au D\u00E9marrage
 checkbox.notify.systemtray = Afficher les nouveaux &messages dans la barre des t\u00E2ches
 checkbox.notify.typing.systemtray = &Afficher les notifications lors de l'\u00E9criture dans la barre des t\u00E2ches
 checkbox.notify.user.comes.online = Notifier lorsqu'un utilisateur se &connecte
@@ -128,24 +131,25 @@ checkbox.play.sound.on.invitation = Alerte sonore lors d'une &invitation
 checkbox.play.sound.on.new.message = Alerte sonore lors d'un &nouveau message
 checkbox.play.sound.on.outgoing.message = Alerte sonore lors de l'envoi d'un message
 checkbox.play.sound.when.offline = Alerte sonore lorsqu'un utilisateur se &d\u00E9connecte
-checkbox.private.room = Salon de discussion priv\u00E9
+checkbox.private.room = Salon de Discussion Priv\u00E9
 checkbox.reconnect.panel.big = Afficher en tant que panneau
 checkbox.reconnect.panel.icon = Afficher en tant qu'icône
 checkbox.reconnect.panel.small = Afficher dans le groupe de contact
 checkbox.reconnet.info = Sp\u00E9cifier l'affichage de reconnexion:
-checkbox.save.password = &Enregistrer le mot de passe
+checkbox.save.password = &Enregistrer le Mot de Passe
 checkbox.show.avatars.in.contactlist = Afficher les &avatars dans la liste de contacts
-checkbox.show.notifications.in.conference = &Afficher les notifications en conf\u00E9rence
+checkbox.show.notifications.in.conference = &Afficher les Notifications en Conf\u00E9rence
 checkbox.show.time.in.chat.window = &Afficher l'heure dans la fen\u00EAtre de conversation
-checkbox.show.toaster = Afficher un &popup de notification
-checkbox.split.chat.window = R\u00E9duire les &fen\u00EAtres (red\u00E9marrage n\u00E9cessaire)
-checkbox.start.in.tray = &D\u00E9marrer dans la zone de notification
+checkbox.show.toaster = Afficher une notification &Popup
+checkbox.split.chat.window = R\u00E9duire les &fen\u00EAtres (N\u00E9cessite de red\u00E9marrer Spark)
+checkbox.start.in.tray = &D\u00E9marrer dans la zone d'iconification
 checkbox.tabs.on.top = Onglets du chat apparaissent sur le dessus (red\u00E9marrage n\u00E9cessaire)
 checkbox.use.compression = Utiliser la compression
 checkbox.use.debugger.on.startup = D\u00E9marrer le d\u00E9bogueur au d\u00E9marrage
+checkbox.use.proxy.server = &Utiliser un Proxy
 checkbox.use.krb.dns = Utiliser DNS
 checkbox.use.system.look.and.feel = Utiliser l'&affichage du syst\u00E8me (red\u00E9marrage n\u00E9cessaire)
-checkbox.window.to.front = &Mettre la fen\u00EAtre au premier plan
+checkbox.window.to.front = &Mettre la fen\u00EAtre en premier plan
 
 delete.log.permanently = Supprimer d\u00E9finitivement le journal
 delete.permanently = Supprimer d\u00E9finitivement?
@@ -159,31 +163,31 @@ group.comma.delimited = D\u00E9limit\u00E9 par virgule (CSV)
 group.conferences.found = Services de conf\u00E9rence
 group.connection = Connexion
 group.empty = Il n'y a pas de contacts en ligne dans ce groupe
-group.general.information = Infos g\u00E9n\u00E9rales
-group.login.information = Informations de connexion
-group.notification.options = Options de notification
+group.general.information = Infos G\u00E9n\u00E9rales
+group.login.information = Infos Login
+group.notification.options = Options de Notification
 group.offline = Groupe Hors-Ligne
-group.search.form = Formulaire de recherche
-group.search.results = R\u00E9sultats de recherche
+group.search.form = Formulaire de Recherche
+group.search.results = Resultats de Recherche
 
 label.accounts = &Comptes
-label.add.conference.service = Ajouter un service de conf\u00E9rence
-label.add.jid = Ajouter JID
+label.add.conference.service = &Ajouter un Service de Conf\u00E9rence
+label.add.jid = &Ajouter JID
 label.add.task = Ajouter une t\u00E2che
-label.auto.login = &Connexion automatique
+label.auto.login = &Auto Login
 label.audio.device = &P\u00E9riph\u00E9rique Audio
-label.available.users.in.roster = Contacts disponibles
+label.available.users.in.roster = &Contacts disponibles
 label.cancel = Annuler
 label.cell = Cellulaire
-label.change.password.to = Changer le mot de passe \u00E0
+label.change.password.to = &Changer le mot de passe
 label.chatroom.fontsize = Taille de la &police du salon de discussion
 label.choose.file = Choisissez le fichier
-label.city = Ville
-label.close = Fermer
-label.company = Soci\u00E9t\u00E9
+label.city = &Ville
+label.close = F&ermer
+label.company = &Soci\u00E9t\u00E9
 label.confirm.password = &Confirmez le mot de passe
 label.conflict.error = Impossible de se connecter car le compte est d\u00E9j\u00E0 connect\u00E9
-label.contact.to.find = Rechercher contact?
+label.contact.to.find = Contact a Rechercher?
 label.contactlist.avatarsize = Taille de l'avatar dans la liste de contact:
 label.contactlist.fontsize = Taille de la police pour la liste de &contact:
 label.country = Pays
