--- a/src/resources/i18n/spark_i18n_fr.properties
+++ b/src/resources/i18n/spark_i18n_fr.properties
@@ -190,80 +190,80 @@ label.conflict.error = Impossible de se connecter car le compte est d\u00E9j\u00
 label.contact.to.find = Contact a Rechercher?
 label.contactlist.avatarsize = Taille de l'avatar dans la liste de contact:
 label.contactlist.fontsize = Taille de la police pour la liste de &contact:
-label.country = Pays
+label.country = P&ays
 label.create.account = Cr\u00E9er un compte
 label.department = D\u00E9partement
-label.dial = Composer
+label.dial = &Num\u00E9roter
 label.downloads = T\u00E9l\u00E9chargements
 label.due = En raison
-label.email.address = Adresse courriel
+label.email.address = &Adresse Email
 label.emoticons = &Emotic\u00F4nes
-label.enter.address = Entrez l'adresse
+label.enter.address = Entrez l'Adresse
 label.enter.group.name = Entrez un nouveau nom de groupe
 label.enter.password = Entrez le mot de passe
-label.fax = Fax
-label.find = Rechercher
-label.first.name = Pr\u00E9nom
+label.fax = &Fax
+label.find = &Rechercher
+label.first.name = &Pr\u00E9nom
 label.frequent.contacts = Frequent Contacts
-label.group = Groupe
+label.group = &Groupe
 label.home = Domicile
-label.host = H\u00F4te
-label.invited.users = Utilisateurs invit\u00E9s
-label.jabber.address = Adresse Jabber
-label.jabber.id = Jabber ID
-label.jid = JID
-label.job.title = Fonction
+label.host = &H\u00F4te
+label.invited.users = Utilisateurs Invit\u00E9s
+label.jabber.address = &Adresse Jabber
+label.jabber.id = &Jabber ID
+label.jid = &JID
+label.job.title = &Fonction
 label.keystore.location = Keystore location
 label.krb.kdc = KDC
 label.krb.realm = Realm
-label.last.name = Nom de famille
-label.local.time = Heure locale
-label.message = Message
+label.last.name = &Nom de famille
+label.local.time = &Heure Locale
+label.message = &Message
 label.message.style = Style du message
-label.middle.name = Deuxi\u00E8me pr\u00E9nom
-label.minutes.before.stale.chat = Nombre de minutes avant qu'un salon de discussion inactif soit suspendu
-label.mobile = Mobile
+label.middle.name = &Deuxi\u00E8me pr\u00E9nom
+label.minutes.before.stale.chat = &Nombre de minutes avant qu'un salon de discussion inactif soit suspendu
+label.mobile = &Mobile
 label.move.focus.backwards = D\u00E9placer le focus vers l'arri\u00E8re
 label.move.focus.forwards = D\u00E9placer le focus vers l'avant
 label.na = n/a
-label.name = Nom
+label.name = &Nom
 label.network = R\u00E9seau
-label.new.nickname = Nouveau surnom
-label.nickname = Surnom
-label.number = Num\u00E9ro
+label.new.nickname = Nouveau Pseudo
+label.nickname = &Pseudo
+label.number = &Num\u00E9ro
 label.ok = OK
-label.old.ssl = Utiliser l'ancienne m\u00E9thode SSL
-label.os = Syst\u00E8me d'op\u00E9ration
-label.pager = T\u00E9l\u00E9avertisseur
-label.password = Mot de &passe
+label.old.ssl = &Utiliser l'ancienne m\u00E9thode SSL
+label.os = &Syst\u00E8me d'exploitation
+label.pager = &Pager
+label.password = &Mot de Passe
 label.passwordreset = R\u00E9initialiser le mot de passe
-label.phone = T\u00E9l\u00E9phone
+label.phone = &T\u00E9l\u00E9phone
 label.pkcs.library.file = PKCS#11 library file
-label.port = Port
-label.postal.code = Code postal
-label.presence = Pr\u00E9sence
-label.priority = Priorit\u00E9
-label.protocol = Protocole
+label.port = &Port
+label.postal.code = &Code Postal
+label.presence = &Pr\u00E9sence
+label.priority = P&riorit\u00E9
+label.protocol = &Protocole
 label.received = Re\u00E7us
 label.recent.conversation = Conversations r\u00E9centes
-label.rename.to = Renommer
-label.resource = Resource
+label.rename.to = &Renommer
+label.resource = &Resource
 label.response.timeout = &Temps maximal de r\u00E9ponse (sec)
-label.room = Salon
-label.room.name = Nom du salon
-label.room.topic = Sujet du salon
-label.search.service = Service de recherche
+label.room = &Salon
+label.room.name = &Nom du Salon
+label.room.topic = &Th\u00E8me
+label.search.service = &Service de Recherche
 label.server = &Serveur
-label.server.address = Adresse du serveur
+label.server.address = &Adresse du Serveur
 label.show = Voir:
-label.software = Logiciel
-label.state.and.province = Etat/province
-label.street.address = Adresse
+label.software = &Logiciel
+label.state.and.province = Etat ou Province
+label.street.address = &Adresse Postale
 label.time = Heure\: (0)
 label.time.till.idle = &Temps maximum avant mise en veille (min)
 label.time.till.idlemessage = Message automatique d'inactivit\u00E9
 label.timeformat = Utiliser {0}
-label.transfer.download.directory = &R\u00E9pertoire de t\u00E9l\u00E9chargement
+label.transfer.download.directory = &R\u00E9pertoire de T\u00E9l\u00E9chargement
 label.transfer.timeout = &Temps d'attente maximal pour un transfert de fichier (min)\:
 label.trust.store.password = Trust store password
 label.truststore.location = Truststore location
@@ -271,9 +271,9 @@ label.unable.to.add.contact = Impossible d'ajouter un contact
 label.use.default = Utiliser les valeurs par d\u00E9faut
 label.user.on.public.network = L'utilisateur est sur un r\u00E9seau public
 label.username = &Nom d'utilisateur
-label.version = Version
+label.version = &Version
 label.video.device = &P\u00E9riph\u00E9rique Vid\u00E9o
-label.web.page = Site Web
+label.web.page = &Site Web
 label.which.pki.method = Quelle m\u00E9thode PKI?
 label.work = Bureau
 label.x509.certificate = Certificat X.509
@@ -293,9 +293,9 @@ lookandfeel.tooltip.restart.yes = Pour basculer d'un th\u00E8me syst\u00E8me app
 menuitem.about = A propos
 menuitem.actions = Actions
 menuitem.add = Ajouter
-menuitem.add.as.contact = Ajouter en tant que contact
-menuitem.add.contact = Ajouter contact
-menuitem.add.contact.group = Ajouter groupe de contact
+menuitem.add.as.contact = Ajouter en tant que Contact
+menuitem.add.contact = Ajouter Contact
+menuitem.add.contact.group = Ajouter Groupe de Contact
 menuitem.add.groupchat.auto.accept.invite = &Accepter automatiquement les invitation aux salles de discussion
 menuitem.add.groupchat.myname = Surligner mon &nom lorsqu'il est mentionn\u00E9
 menuitem.add.groupchat.mytext = &Surligner mon texte quand je dis quelque chose
@@ -313,9 +313,9 @@ menuitem.block.user = Bloquer l'utilisateur
 menuitem.bookmark.room = Ajouter le salon aux favoris
 menuitem.bookmarks = Favoris
 menuitem.broadcast.to.group = Envoyer un message \u00E0 tout le groupe
-menuitem.browse.service = Voir les services
-menuitem.change.nickname = Changer de surnom
-menuitem.change.subject = Changer le sujet
+menuitem.browse.service = Voir les Services
+menuitem.change.nickname = Changer de Nickname
+menuitem.change.subject = Changer le Sujet
 menuitem.chat = Conversation
 menuitem.chatframe.option = Options
 menuitem.check.for.updates = Mettre \u00E0 jour
@@ -325,10 +325,10 @@ menuitem.copy.to = Copier vers
 menuitem.create.room = Cr\u00E9ez ou rejoignez un salon
 menuitem.delete = Effacer
 menuitem.delete.login.information = Supprimer les informations de connexion
-menuitem.destroy.room = Fermer le salon
+menuitem.destroy.room = Fermer le Salon
 menuitem.dial = Composer
 menuitem.edit = Editer
-menuitem.edit.my.profile = &Editer mon profil
+menuitem.edit.my.profile = &Editer mon Profil
 menuitem.edit.status.message = Editer les messages personalis\u00E9s...
 menuitem.enter.login.information = Entrez les informations de connexion
 menuitem.exit = Sortir
@@ -336,68 +336,68 @@ menuitem.expand.all.groups = Agrandir tous les groupes
 menuitem.grant.admin = Rendre admin
 menuitem.grant.member = Rendre membre
 menuitem.grant.owner = Rendre propri\u00E8taire
-menuitem.grant.moderator = Rendre mod\u00E9rateur
-menuitem.grant.voice = Rendre la voix
+menuitem.grant.moderator = Rendre Mod\u00E9rateur
+menuitem.grant.voice = Voice
 menuitem.help = Aide
 menuitem.hide = Cacher
 menuitem.inivite.again = Inviter de nouveau
 menuitem.invite.group.to.conference = Inviter le groupe \u00E0 cette conf\u00E9rence
 menuitem.invite.users = Inviter Utilisateurs
-menuitem.join.on.startup = Rejoindre au d\u00E9marrage
-menuitem.join.room = Rejoindre le salon
+menuitem.join.on.startup = Rejoindre au D\u00E9marrage
+menuitem.join.room = Rejoindre le Salon
 menuitem.kick.user = Kicker l'Utilisateur
 menuitem.languages = Langues
-menuitem.logout.no.status = Fermer cette session
-menuitem.logout.with.status = Fermer cette session avec un message
-menuitem.lookup.profile = &Rechercher le profil
+menuitem.logout.no.status = Fermer cette Session
+menuitem.logout.with.status = Fermer cette Session avec un message
+menuitem.lookup.profile = &Rechercher le Profil
 menuitem.move.to = D\u00E9placer vers
-menuitem.online.help = Aide en ligne
+menuitem.online.help = Aide en Ligne
 menuitem.open = Ouvrir
 menuitem.open.with = Ouvrir avec...
-menuitem.plugins = Plugins
+menuitem.plugins = &Plugins
 menuitem.preferences = Pr\u00E9f\u00E9rences
 menuitem.refresh = Rafraichir
 menuitem.remove = Enlever
-menuitem.remove.alert.when.online = Enlever l'alerte
-menuitem.remove.bookmark = Retirer de mes favoris
-menuitem.remove.from.group = Supprimer le groupe
-menuitem.remove.from.roster = Retirer des contacts
-menuitem.remove.service = Enlever le service
+menuitem.remove.alert.when.online = Enlever l'Alerte
+menuitem.remove.bookmark = Retirer de mes Favoris
+menuitem.remove.from.group = Supprimer le Groupe
+menuitem.remove.from.roster = Retirer des Contacts
+menuitem.remove.service = Enlever le Service
 menuitem.rename = Renommer
 menuitem.revoke.admin = R\u00E9voquer les droits admin
 menuitem.revoke.member = R\u00E9voquer les droits de membre
-menuitem.revoke.moderator = R\u00E9voquer les droits de mod\u00E9rateur
+menuitem.revoke.moderator = R\u00E9voquer les droits de Mod\u00E9rateur
 menuitem.revoke.owner = R\u00E9voquer les droits propri\u00E9taire
-menuitem.revoke.voice = R\u00E9voquer les droits de voix
+menuitem.revoke.voice = R\u00E9voquer les droits de Voice
 menuitem.save = Enregistrer
 menuitem.save.as = Enregistrer sous...
-menuitem.send.a.file = Envoyer un fichier
-menuitem.send.a.message = Envoyer un message...
+menuitem.send.a.file = Envoyer un Fichier
+menuitem.send.a.message = Envoyer un Message...
 menuitem.set.status.message = Message d'\u00E9tat
 menuitem.show.contact.statusmessage = Afficher le message d'\u00E9tat
-menuitem.show.empty.groups = Afficher les groupes vides
+menuitem.show.empty.groups = Montrer les Groupes Vides
 menuitem.show.offline.group = Grouper les usagers hors-lignes
 menuitem.show.offline.users = Afficher les usagers hors-lignes
-menuitem.show.traffic = Montrer la fen\u00EAtre de traffic
+menuitem.show.traffic = Montrer la Fen\u00EAtre de Traffic
 menuitem.sign.in = Connexion
 menuitem.sign.in.at.login = Connexion au login
 menuitem.sign.out = D\u00E9connexion
-menuitem.start.a.chat = Commencer une conversation
-menuitem.start.a.conference = Commencer une conf\u00E9rence
+menuitem.start.a.chat = Commencer une Conversation
+menuitem.start.a.conference = Commencer une Conf\u00E9rence
 menuitem.status = Etat
 menuitem.subscribe.to = Souscrire \u00E0
 menuitem.unban = D\u00E9bannir
 menuitem.unblock.contact = D\u00E9bloquer le contact
 menuitem.unblock.user = D\u00E9bloquer l'Utilisateur
 menuitem.user.guide = Guide de l'usager
-menuitem.view.client.version = Voir version du client
-menuitem.view.contact.history = Voir l'historique de ce Contact
-menuitem.view.downloads = Voir les t\u00E9l\u00E9chargements
+menuitem.view.client.version = Voir Version du Client
+menuitem.view.contact.history = Voir l'Historique de ce Contact
+menuitem.view.downloads = Voir les T\u00E9l\u00E9chargements
 menuitem.view.last.activity = Voir la derni\u00E8re activit\u00E9
 menuitem.view.logs = Visualiser le journal
-menuitem.view.profile = Voir profil
-menuitem.view.room.info = Voir les infos du salon
-menuitem.voice = Voix
+menuitem.view.profile = Voir Profil
+menuitem.view.room.info = Voir les Infos du Salon
+menuitem.voice = Voice
 
 message.account.create = Cr\u00E9er un nouveau compte.
 message.account.created = Le nouveau compte a \u00E9t\u00E9 cr\u00E9e.
